# CodingProjects

./: README.md
C++Projects/: a.out  main.cpp
C++Projects/fdp/bio/: CMakeLists.txt  main.cpp  museo.cpp
C++Projects/fdp/campo_minato/: CMakeLists.txt  campo_minato.cpp  campo_minato.h  main.cpp
C++Projects/fdp/chess/: CMakeLists.txt  board.cpp  (+8 more)
C++Projects/fdp/chess_v5/: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  main.cpp  piece.cpp  piece.h  position.cpp  position.h  rules.cpp  rules.h  square.cpp  square.h
CProjects/: CMakeLists.txt  a.out  file01  file01.h  file02.h  file03  main  main.c
Jupyter/: algebra.ipynb  chimca.ipynb  constants.py  double_pendulum.ipynb  fisica.ipynb  main.py  molarmass.py  page.txt  plotting.py  temp.txt  test.ipynb  test.py
LaTex/: main.fdb_latexmk  main.fls  main.tex
Pendolo/: main.py  pendoli.py
Python/: file_01.py
PythonProjects/: 3d.py  candy-crush.py  candy.py  coord.py  file_00000.py  file_00001.py  file_00004.py  file_00005.py  file_00006.py  file_00007.py  file_00008.py  file_00010.py  fisica.ipynb  leet.py  linked_list.py  miscellaneus.py  plto.py  point.py  string_operations.py  stringhe.py  test.py
Test/: a.out  main.c
VSCode/: card.py  file_00000.py  file_00001.py  file_00002.txt  file_00003.py  file_00009.py
WebProjects/: candyCrush.js  file.js  test.js  test1.js
WebProjects/CProject/: file_01  file_01.c
WebProjects/tictactoe/: tic.css
analisi/: file_1.pyx  main.py  pendolo.c  pendolo.pyx  setup.py  test.py
analisi/main/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
(+99 files in other folders)
